update NotFound error page component

--- a/src/i18n/language/cs.json
+++ b/src/i18n/language/cs.json
@@ -3,5 +3,9 @@
     "drivers": "Jezdci",
     "teams": "Týmy",
     "season": "Sezóna"
+  },
+  "notFound": {
+    "pageNotFound": "Stránka nebyla nalezena!",
+    "home": "Domů"
   }
 }
