--- a/src/i18n/language/en.json
+++ b/src/i18n/language/en.json
@@ -3,5 +3,9 @@
     "drivers": "Drivers",
     "teams": "Teams",
     "season": "Season"
+  },
+  "notFound": {
+    "pageNotFound": "Page was not found!",
+    "home": " Home"
   }
 }
