--- a/src/i18n/language/en.json
+++ b/src/i18n/language/en.json
@@ -7,5 +7,10 @@
   "notFound": {
     "pageNotFound": "Page was not found!",
     "home": " Home"
+  },
+  "error": {
+    "wentWrong": "Something went wrong!",
+    "tryAgainLater": "Try again later...",
+    "repeat": "Repeat"
   }
 }
