--- a/src/i18n/language/en.json
+++ b/src/i18n/language/en.json
@@ -8,6 +8,9 @@
     "pageNotFound": "Page was not found!",
     "home": " Home"
   },
+  "loading": {
+    "loading": "Loading..."
+  },
   "error": {
     "wentWrong": "Something went wrong!",
     "tryAgainLater": "Try again later...",
