add DriverDetail page component

--- a/src/i18n/language/cs.json
+++ b/src/i18n/language/cs.json
@@ -15,5 +15,14 @@
     "wentWrong": "Něco se pokazilo!",
     "tryAgainLater": "Zkuste to znovu později...",
     "repeat": "Opakovat"
+  },
+  "driver": {
+    "firstname": "Jméno",
+    "lastname": "Přijmení",
+    "born": "Narození",
+    "height": "Výška",
+    "number": "Číslo",
+    "points": "Body",
+    "team": "Tým"
   }
 }
